fixes bug 189965 "ANY connection error treated as TCP RST, resulting in "the document contains no data" [was: Yahoo - The connection was refused when attempting to contact rd.yahoo.com]" r=wtc sr=bz a=dbaron